// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotifyHorseInfosStack Snapshot Tests should match snapshot for CloudWatch Log Group 1`] = `
{
  "LogGroupF5B46931": {
    "DeletionPolicy": "Delete",
    "Properties": {
      "LogGroupName": "test-stack/EntryFunction",
      "RetentionInDays": 30,
    },
    "Type": "AWS::Logs::LogGroup",
    "UpdateReplacePolicy": "Delete",
  },
}
`;

exports[`NotifyHorseInfosStack Snapshot Tests should match snapshot for EventBridge rule 1`] = `{}`;

exports[`NotifyHorseInfosStack Snapshot Tests should match snapshot for IAM roles and policies 1`] = `
{
  "policies": {
    "EntryFunctionServiceRoleDefaultPolicy4FDA2B0C": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EntryFunctionServiceRoleDefaultPolicy4FDA2B0C",
        "Roles": [
          {
            "Ref": "EntryFunctionServiceRole9D7E61C9",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "SchedulerRoleForTarget5b6a9aDefaultPolicyE03F09D9": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "states:StartExecution",
              "Effect": "Allow",
              "Resource": {
                "Ref": "TestStackStateMachineFE483C5B",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SchedulerRoleForTarget5b6a9aDefaultPolicyE03F09D9",
        "Roles": [
          {
            "Ref": "SchedulerRoleForTarget5b6a9aCCB87E03",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TestStackStateMachineRoleDefaultPolicy3735A3ED": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":s3:::test-horses-bucket/*",
                  ],
                ],
              },
            },
            {
              "Action": "ssm:getParameters",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":ssm:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":parameter/test/api/url1",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":ssm:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":parameter/test/api/url2",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "EntryFunction0B25DB0A",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "EntryFunction0B25DB0A",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "sqs:SendMessage",
              "Effect": "Allow",
              "Resource": "arn:aws:sqs:us-east-1:123456789012:test-queue",
            },
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
                "xray:GetSamplingRules",
                "xray:GetSamplingTargets",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TestStackStateMachineRoleDefaultPolicy3735A3ED",
        "Roles": [
          {
            "Ref": "TestStackStateMachineRole3A7DE366",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "roles": {
    "EntryFunctionServiceRole9D7E61C9": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "SchedulerRoleForTarget5b6a9aCCB87E03": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":scheduler:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":schedule-group/default",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "TestStackStateMachineRole3A7DE366": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`NotifyHorseInfosStack Snapshot Tests should match snapshot for Lambda function configuration 1`] = `
{
  "EntryFunction0B25DB0A": {
    "DependsOn": [
      "EntryFunctionServiceRoleDefaultPolicy4FDA2B0C",
      "EntryFunctionServiceRole9D7E61C9",
    ],
    "Properties": {
      "Architectures": [
        "arm64",
      ],
      "Code": {
        "S3Bucket": {
          "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
        },
        "S3Key": "HASH_PLACEHOLDER.zip",
      },
      "Handler": "index.handler",
      "LoggingConfig": {
        "LogGroup": {
          "Ref": "LogGroupF5B46931",
        },
      },
      "Role": {
        "Fn::GetAtt": [
          "EntryFunctionServiceRole9D7E61C9",
          "Arn",
        ],
      },
      "Runtime": "nodejs24.x",
      "Timeout": 60,
      "TracingConfig": {
        "Mode": "Active",
      },
    },
    "Type": "AWS::Lambda::Function",
  },
}
`;

exports[`NotifyHorseInfosStack Snapshot Tests should match snapshot for Step Functions state machine 1`] = `
{
  "TestStackStateMachineFE483C5B": {
    "DeletionPolicy": "Delete",
    "DependsOn": [
      "TestStackStateMachineRoleDefaultPolicy3735A3ED",
      "TestStackStateMachineRole3A7DE366",
    ],
    "Properties": {
      "DefinitionString": {
        "Fn::Join": [
          "",
          [
            "{"StartAt":"GetHorses","States":{"GetHorses":{"Next":"GetApiUrls","Type":"Task","ResultPath":"$.taskResult","ResultSelector":{"horsesJson.$":"States.StringToJson($.Body)"},"Resource":"arn:",
            {
              "Ref": "AWS::Partition",
            },
            ":states:::aws-sdk:s3:getObject","Parameters":{"Bucket":"test-horses-bucket","Key":"horses.json"}},"GetApiUrls":{"Next":"Entry","Type":"Task","ResultPath":"$.taskResult.UrlParameters","Resource":"arn:",
            {
              "Ref": "AWS::Partition",
            },
            ":states:::aws-sdk:ssm:getParameters","Parameters":{"Names":["/test/api/url1","/test/api/url2"]}},"Entry":{"Next":"Message is not null","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","ResultPath":"$.taskResult","Resource":"",
            {
              "Fn::GetAtt": [
                "EntryFunction0B25DB0A",
                "Arn",
              ],
            },
            "","Parameters":{"time.$":"$.time","urlParameters.$":"$.taskResult.UrlParameters.Parameters","horses.$":"$.taskResult.horsesJson.horses"}},"Message is not null":{"Type":"Choice","Choices":[{"Variable":"$.taskResult.message","IsNull":false,"Next":"SendMessage"}],"Default":"End"},"End":{"Type":"Pass","End":true},"SendMessage":{"End":true,"Type":"Task","Resource":"arn:",
            {
              "Ref": "AWS::Partition",
            },
            ":states:::sqs:sendMessage","Parameters":{"QueueUrl":"https://sqs.us-east-1.",
            {
              "Ref": "AWS::URLSuffix",
            },
            "/123456789012/test-queue","MessageBody":{"webhookname":"test-webhook","message.$":"$.taskResult.message"}}}}}",
          ],
        ],
      },
      "RoleArn": {
        "Fn::GetAtt": [
          "TestStackStateMachineRole3A7DE366",
          "Arn",
        ],
      },
      "TracingConfiguration": {
        "Enabled": true,
      },
    },
    "Type": "AWS::StepFunctions::StateMachine",
    "UpdateReplacePolicy": "Delete",
  },
}
`;

exports[`NotifyHorseInfosStack Snapshot Tests should match snapshot for complete stack 1`] = `
{
  "Parameters": {
    "ApiUrlParameters0Parameter": {
      "Default": "/test/api/url1",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "ApiUrlParameters1Parameter": {
      "Default": "/test/api/url2",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "EntryFunction0B25DB0A": {
      "DependsOn": [
        "EntryFunctionServiceRoleDefaultPolicy4FDA2B0C",
        "EntryFunctionServiceRole9D7E61C9",
      ],
      "Properties": {
        "Architectures": [
          "arm64",
        ],
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "HASH_PLACEHOLDER.zip",
        },
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "LogGroupF5B46931",
          },
        },
        "Role": {
          "Fn::GetAtt": [
            "EntryFunctionServiceRole9D7E61C9",
            "Arn",
          ],
        },
        "Runtime": "nodejs24.x",
        "Timeout": 60,
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "EntryFunctionServiceRole9D7E61C9": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "EntryFunctionServiceRoleDefaultPolicy4FDA2B0C": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "EntryFunctionServiceRoleDefaultPolicy4FDA2B0C",
        "Roles": [
          {
            "Ref": "EntryFunctionServiceRole9D7E61C9",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "LogGroupF5B46931": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "test-stack/EntryFunction",
        "RetentionInDays": 30,
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "Schedule83A77FD1": {
      "Properties": {
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "ScheduleExpression": "cron(0 6 * * ? *)",
        "ScheduleExpressionTimezone": "Asia/Tokyo",
        "State": "ENABLED",
        "Target": {
          "Arn": {
            "Ref": "TestStackStateMachineFE483C5B",
          },
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 86400,
            "MaximumRetryAttempts": 185,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "SchedulerRoleForTarget5b6a9aCCB87E03",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "SchedulerRoleForTarget5b6a9aCCB87E03": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":scheduler:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":schedule-group/default",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "SchedulerRoleForTarget5b6a9aDefaultPolicyE03F09D9": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "states:StartExecution",
              "Effect": "Allow",
              "Resource": {
                "Ref": "TestStackStateMachineFE483C5B",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "SchedulerRoleForTarget5b6a9aDefaultPolicyE03F09D9",
        "Roles": [
          {
            "Ref": "SchedulerRoleForTarget5b6a9aCCB87E03",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "TestStackStateMachineFE483C5B": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "TestStackStateMachineRoleDefaultPolicy3735A3ED",
        "TestStackStateMachineRole3A7DE366",
      ],
      "Properties": {
        "DefinitionString": {
          "Fn::Join": [
            "",
            [
              "{"StartAt":"GetHorses","States":{"GetHorses":{"Next":"GetApiUrls","Type":"Task","ResultPath":"$.taskResult","ResultSelector":{"horsesJson.$":"States.StringToJson($.Body)"},"Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::aws-sdk:s3:getObject","Parameters":{"Bucket":"test-horses-bucket","Key":"horses.json"}},"GetApiUrls":{"Next":"Entry","Type":"Task","ResultPath":"$.taskResult.UrlParameters","Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::aws-sdk:ssm:getParameters","Parameters":{"Names":["/test/api/url1","/test/api/url2"]}},"Entry":{"Next":"Message is not null","Retry":[{"ErrorEquals":["Lambda.ClientExecutionTimeoutException","Lambda.ServiceException","Lambda.AWSLambdaException","Lambda.SdkClientException"],"IntervalSeconds":2,"MaxAttempts":6,"BackoffRate":2}],"Type":"Task","ResultPath":"$.taskResult","Resource":"",
              {
                "Fn::GetAtt": [
                  "EntryFunction0B25DB0A",
                  "Arn",
                ],
              },
              "","Parameters":{"time.$":"$.time","urlParameters.$":"$.taskResult.UrlParameters.Parameters","horses.$":"$.taskResult.horsesJson.horses"}},"Message is not null":{"Type":"Choice","Choices":[{"Variable":"$.taskResult.message","IsNull":false,"Next":"SendMessage"}],"Default":"End"},"End":{"Type":"Pass","End":true},"SendMessage":{"End":true,"Type":"Task","Resource":"arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":states:::sqs:sendMessage","Parameters":{"QueueUrl":"https://sqs.us-east-1.",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/123456789012/test-queue","MessageBody":{"webhookname":"test-webhook","message.$":"$.taskResult.message"}}}}}",
            ],
          ],
        },
        "RoleArn": {
          "Fn::GetAtt": [
            "TestStackStateMachineRole3A7DE366",
            "Arn",
          ],
        },
        "TracingConfiguration": {
          "Enabled": true,
        },
      },
      "Type": "AWS::StepFunctions::StateMachine",
      "UpdateReplacePolicy": "Delete",
    },
    "TestStackStateMachineRole3A7DE366": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "states.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "TestStackStateMachineRoleDefaultPolicy3735A3ED": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":s3:::test-horses-bucket/*",
                  ],
                ],
              },
            },
            {
              "Action": "ssm:getParameters",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":ssm:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":parameter/test/api/url1",
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":ssm:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":parameter/test/api/url2",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "lambda:InvokeFunction",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "EntryFunction0B25DB0A",
                    "Arn",
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "EntryFunction0B25DB0A",
                          "Arn",
                        ],
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": "sqs:SendMessage",
              "Effect": "Allow",
              "Resource": "arn:aws:sqs:us-east-1:123456789012:test-queue",
            },
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
                "xray:GetSamplingRules",
                "xray:GetSamplingTargets",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "TestStackStateMachineRoleDefaultPolicy3735A3ED",
        "Roles": [
          {
            "Ref": "TestStackStateMachineRole3A7DE366",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
